--- a/index.html
+++ b/index.html
@@ -173,14 +173,11 @@
                 </div>
                 <input type="text" id="search-input"
                     class="w-full bg-transparent border-none text-white placeholder-white/60 text-lg px-4 py-2.5 focus:outline-none"
-                    placeholder="Search or type '>edit'..." autocomplete="off" autofocus>
+                    placeholder="Search..." autocomplete="off" autofocus>
                 <div id="engine-container" class="hidden md:flex gap-2 pr-2"></div>
             </div>
 
-            <div class="mt-2 text-center text-xs text-white/40 font-mono hidden md:block space-x-4">
-                <span><span class="bg-white/10 px-1 rounded text-white/70">>edit</span> customize</span>
-                <span><span class="bg-white/10 px-1 rounded text-white/70">>sync</span> update</span>
-            </div>
+            
         </div>
 
         <!-- 导航网格 -->
