--- a/options.html
+++ b/options.html
@@ -52,7 +52,7 @@
   </div>
 
   <script src="vendor/js-yaml.min.js"></script>
-  <script src="options.js"></script>
+  <script type="module" src="options.js"></script>
 </body>
 </html>
 
