--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     <!-- 本地脚本库 -->
     <script src="vendor/js-yaml.min.js"></script>
     <script src="vendor/Sortable.min.js"></script>
+    <script>
+        (function () {
+            try {
+                const s = localStorage.getItem('nav_wallpaper_url');
+                if (s) {
+                    let u = s;
+                    if (s.startsWith('{')) { try { u = JSON.parse(s).url; } catch { } }
+                    if (u) document.documentElement.style.setProperty('--wallpaper-url', `url("${u}")`);
+                }
+                const w = localStorage.getItem('nav_icon_weight');
+                if (w) document.documentElement.classList.add('phw-' + w);
+            } catch { }
+        })();
+    </script>
 </head>
 
 <body class="min-h-screen text-white selection:bg-pink-500 selection:text-white">
@@ -119,7 +133,7 @@
                     </select>
                 </div>
 
-                <div>
+                <div class="edit-field-item">
                     <label class="block text-xs text-white/50 uppercase mb-1">Icon</label>
                     <div class="flex gap-2">
                         <input type="text" id="inp-icon" class="input-glass" placeholder="e.g. ph-github-logo">
@@ -177,7 +191,7 @@
                 <div id="engine-container" class="hidden md:flex gap-2 pr-2"></div>
             </div>
 
-            
+
         </div>
 
         <!-- 导航网格 -->
@@ -270,7 +284,7 @@
     </div>
 
     <!-- 引入核心逻辑 -->
-    <script src="js/app.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
